// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component snapshots of article card with title and description 1`] = `
<article
  className=""
  data-testid="codeannex-card-component"
  disabled={false}
  onClick={[Function]}
>
  <h2
    data-testid="child"
  >
    Title
  </h2>
  <p>
    Description
  </p>
</article>
`;

exports[`Card Component snapshots of div card with title and description 1`] = `
<div
  className=""
  data-testid="codeannex-card-component"
  disabled={false}
  onClick={[Function]}
>
  <h2
    data-testid="child"
  >
    Title
  </h2>
  <p>
    Description
  </p>
</div>
`;
